24-03-07 | 장창엽 | 파일 충돌로 인한 push

--- a/src/main/resources/static/css/myBand.css
+++ b/src/main/resources/static/css/myBand.css
@@ -161,6 +161,12 @@ div.myBand_content_item_content img{
 	border-radius: 10px;
 	margin-bottom : 10px;
 }
+div.myBand_feedView_content_item_content img{
+	display : block;
+	width: 100% !important;
+	border-radius: 10px;
+	margin-bottom : 10px;
+}
 .join_band_item{
 	min-width: 220px;
 	}
