--- a/src/main/resources/templates/nav/nav.html
+++ b/src/main/resources/templates/nav/nav.html
@@ -44,7 +44,7 @@
 						<li class="nav-item"><a class="nav-link" href="feed">피드</a></li>
 						<li class="nav-item"><a class="nav-link" href="aicc">AI
 								돋보기</a></li>
-						<li class="nav-item"><a class="nav-link" href="band">밴드</a></li>
+						<li class="nav-item"><a class="nav-link" href="band">동행</a></li>
 						<li class="nav-item dropdown navli"><a class="nav-link" href="info"
 							role="button" data-bs-toggle="dropdown" aria-expanded="false">여행정보</a>
 							<ul class="dropdown-menu z-5 text-md-center w-25" >
