--- a/src/main/resources/templates/thymeleaf/map/map_0221.html
+++ b/src/main/resources/templates/thymeleaf/map/map_0221.html
@@ -656,7 +656,9 @@ $(document).ready(function() {
 			location.href = "/map?category=축제" ;
 		}  else if(index_num == 8){
 			location.href = "/map?category=산,바다" ;
-		} 
+		}  else if(index_num == 9){
+			location.href = "/map?category=여행코스" ;
+		}  
 
 		
 	})
