--- a/src/main/resources/templates/thymeleaf/map/mapDay2.html
+++ b/src/main/resources/templates/thymeleaf/map/mapDay2.html
@@ -151,7 +151,7 @@
 						<hr class="px-5 text-black-50" />
 						<div class="row" th:each="aicc:${aicc}">
 							<div class="col">
-								<a th:href="@{'Event_view?id='+ ${aicc.getEvent_num()}}">
+								<a href="#" th:onclick="func_popEvent([[${aicc.getEvent_num()}]])">
 									<div class="row px-4 Event_contentRow">
 										<div class="col-1 count">
 											<p class="text-center f22">1</p>
@@ -180,7 +180,7 @@
 						<hr class="px-5 text-black-50 my-2" />
 						<div class="row" th:each="aiccFood:${aiccFood}">
 							<div class="col">
-								<a th:href="@{'Event_view?id='+ ${aiccFood.getEvent_num()}}">
+								<a href="#" th:onclick="func_popEvent([[${aiccFood.getEvent_num()}]])">
 									<div class="row px-4 Event_contentRow">
 										<div class="col-1 count">
 											<p class="text-center f22">2</p>
@@ -209,7 +209,7 @@
 						<hr class="px-5 text-black-50" />
 						<div class="row" th:each="aicc2:${aicc2}">
 							<div class="col">
-								<a th:href="@{'Event_view?id='+ ${aicc2.getEvent_num()}}">
+								<a href="#" th:onclick="func_popEvent([[${aicc2.getEvent_num()}]])">
 									<div class="row px-4 Event_contentRow">
 										<div class="col-1 count">
 											<p class="text-center f22">3</p>
@@ -237,7 +237,7 @@
 						<hr class="px-5 text-black-50" />
 						<div class="row" th:each="aiccCafe:${aiccCafe}">
 							<div class="col">
-								<a th:href="@{'Event_view?id='+ ${aiccCafe.getEvent_num()}}">
+								<a href="#" th:onclick="func_popEvent([[${aiccCafe.getEvent_num()}]])">
 									<div class="row px-4 Event_contentRow">
 										<div class="col-1 count">
 											<p class="text-center f22">4</p>
@@ -265,7 +265,7 @@
 						<hr class="px-5 text-black-50" />
 						<div class="row " th:each="aiccFood2:${aiccFood2}">
 							<div class="col">
-								<a th:href="@{'Event_view?id='+ ${aiccFood2.getEvent_num()}}">
+								<a href="#" th:onclick="func_popEvent([[${aiccFood2.getEvent_num()}]])">
 									<div class="row px-4 Event_contentRow">
 										<div class="col-1 count">
 											<p class="text-center f22">5</p>
@@ -294,7 +294,7 @@
 							<hr class="px-5 text-black-50" />
 							<div class="row" th:each="hotel:${hotel}">
 								<div class="col">
-									<a th:href="@{'Event_view?id='+ ${hotel.getEvent_num()}}">
+									<a href="#" th:onclick="func_popEvent([[${hotel.getEvent_num()}]])">
 										<div class="row px-4 Event_contentRow">
 											<div class="col-1 count">
 												<p class="text-center f22">6</p>
@@ -329,7 +329,7 @@
 						<hr class="px-5 text-black-50" />
 						<div class="row mb-5" th:each="aicc3:${aicc3}">
 							<div class="col ">
-								<a th:href="@{'Event_view?id='+ ${aicc3.getEvent_num()}}">
+								<a href="#" th:onclick="func_popEvent([[${aicc3.getEvent_num()}]])">
 									<div class="row px-4 Event_contentRow">
 										<div class="col-1 count">
 											<p class="text-center f22">1</p>
@@ -358,7 +358,7 @@
 						<hr class="px-5 text-black-50" />
 						<div class="row" th:each="aiccFood3:${aiccFood3}">
 							<div class="col">
-								<a th:href="@{'Event_view?id='+ ${aiccFood3.getEvent_num()}}">
+								<a href="#" th:onclick="func_popEvent([[${aiccFood3.getEvent_num()}]])">
 									<div class="row px-4 Event_contentRow">
 										<div class="col-1 count">
 											<p class="text-center f22">2</p>
@@ -387,7 +387,7 @@
 						<hr class="px-5 text-black-50" />
 						<div class="row" th:each="aicc4:${aicc4}">
 							<div class="col">
-								<a th:href="@{'Event_view?id='+ ${aicc4.getEvent_num()}}">
+								<a href="#" th:onclick="func_popEvent([[${aicc4.getEvent_num()}]])">
 									<div class="row px-4 Event_contentRow">
 										<div class="col-1 count">
 											<p class="text-center f22">3</p>
@@ -415,7 +415,7 @@
 						<hr class="px-5 text-black-50" />
 						<div class="row" th:each="aiccCafe2:${aiccCafe2}">
 							<div class="col">
-								<a th:href="@{'Event_view?id='+ ${aiccCafe2.getEvent_num()}}">
+								<a href="#" th:onclick="func_popEvent([[${aiccCafe2.getEvent_num()}]])">
 									<div class="row px-4 Event_contentRow">
 										<div class="col-1 count">
 											<p class="text-center f22">4</p>
@@ -443,7 +443,7 @@
 						<hr class="px-5 text-black-50" />
 						<div class="row mb-3" th:each="aiccFood4:${aiccFood4}">
 							<div class="col mb-5">
-								<a th:href="@{'Event_view?id='+ ${aiccFood4.getEvent_num()}}">
+								<a href="#" th:onclick="func_popEvent([[${aiccFood4.getEvent_num()}]])">
 									<div class="row px-4 Event_contentRow">
 										<div class="col-1 count">
 											<p class="text-center f22">5</p>
@@ -624,9 +624,7 @@
 		for (var i = 0; i < positions.length; i++) {
 			var content = '<div class="bg-pink px-3 p-1 rounded-pill border border-dark text-black" style="position: relative;left:0px;bottom: 65px;font-size: 12px; margin:0 auto;z-index:3;">'
 					+ '    <div class="info">'
-					+ '            <a href="Event_view?id='
-					+ positions[i].number
-					+ '">'
+					+ '            <a href="#"  onclick="func_popEvent('+positions[i].number+')">'
 					+ '        <div class="title">'
 					+ [ i + 1 ]
 					+ ". "
@@ -771,9 +769,7 @@
 		for (var i = 0; i < positions2.length; i++) {
 			var content2 = '<div class="bg-pink px-3 p-1 rounded-pill border border-dark text-black" style="position: relative;left:0px;bottom: 65px;font-size: 12px; margin:0 auto;z-index:3;">'
 					+ '    <div class="info">'
-					+ '            <a href="Event_view?id='
-					+ positions2[i].number
-					+ '">'
+					+ '            <a href="#"  onclick="func_popEvent('+positions2[i].number+')">'
 					+ '        <div class="title">'
 					+ [ i + 1 ]
 					+ ". "
@@ -951,7 +947,34 @@
 	    	  });
 	    	});
 	</script>
+<!-- 코스 리스트 클릭 시 여행정보 팝업창 출력 -->
+<script>
 
+	
+	function func_popEvent(param) {
+		
+		// width  : 팝업창 가로 크기
+	    // height : 팝업창 세로 크기
+	    var popupWidth = 700;
+	    var popupHeight = 600;
+	    
+     	// 브라우저 중앙 위치 계산
+        // window.screenX : 브라우저의 현재 스크린 좌측상단 X좌표
+        // window.screenY : 브라우저의 현재 스크린 좌측상단 Y좌표
+       
+        // window.outerWidth  : 브라우저의 전체 가로 크기
+        // window.outerHeight : 브라우저의 전체 가로 크기
+        var popupX = Math.round(window.screenX + (window.outerWidth/2) - (popupWidth/2));
+        var popupY = Math.round(window.screenY + (window.outerHeight/2) - (popupHeight/2));
+        
+        var featureWindow = "width=" + popupWidth + ", height="+popupHeight
+        + ", left=" + popupX + ", top=" + popupY;
+        
+		window.open('/Event_view?id='+param, '_blank',featureWindow );
+		
+	}
+
+</script>
 </body>
 
 </html>
