--- a/src/main/resources/templates/thymeleaf/map/mapDay3.html
+++ b/src/main/resources/templates/thymeleaf/map/mapDay3.html
@@ -160,7 +160,7 @@
 						<hr class="px-5 text-black-50" />
 						<div class="row" th:each="aicc:${aicc}">
 							<div class="col">
-								<a th:href="@{'Event_view?id='+ ${aicc.getEvent_num()}}">
+								<a href="#" th:onclick="func_popEvent([[${aicc.getEvent_num()}]])">
 									<div class="row px-4 Event_contentRow">
 										<div class="col-1 count">
 											<p class="text-center f22">1</p>
@@ -189,7 +189,7 @@
 						<hr class="px-5 text-black-50 my-2" />
 						<div class="row" th:each="aiccFood:${aiccFood}">
 							<div class="col">
-								<a th:href="@{'Event_view?id='+ ${aiccFood.getEvent_num()}}">
+								<a href="#" th:onclick="func_popEvent([[${aiccFood.getEvent_num()}]])">
 									<div class="row px-4 Event_contentRow">
 										<div class="col-1 count">
 											<p class="text-center f22">2</p>
@@ -218,7 +218,7 @@
 						<hr class="px-5 text-black-50" />
 						<div class="row" th:each="aicc2:${aicc2}">
 							<div class="col">
-								<a th:href="@{'Event_view?id='+ ${aicc2.getEvent_num()}}">
+								<a href="#" th:onclick="func_popEvent([[${aicc2.getEvent_num()}]])">
 									<div class="row px-4 Event_contentRow">
 										<div class="col-1 count">
 											<p class="text-center f22">3</p>
@@ -246,7 +246,7 @@
 						<hr class="px-5 text-black-50" />
 						<div class="row" th:each="aiccCafe:${aiccCafe}">
 							<div class="col">
-								<a th:href="@{'Event_view?id='+ ${aiccCafe.getEvent_num()}}">
+								<a href="#" th:onclick="func_popEvent([[${aiccCafe.getEvent_num()}]])">
 									<div class="row px-4 Event_contentRow">
 										<div class="col-1 count">
 											<p class="text-center f22">4</p>
@@ -274,7 +274,7 @@
 						<hr class="px-5 text-black-50" />
 						<div class="row " th:each="aiccFood2:${aiccFood2}">
 							<div class="col">
-								<a th:href="@{'Event_view?id='+ ${aiccFood2.getEvent_num()}}">
+								<a href="#" th:onclick="func_popEvent([[${aiccFood2.getEvent_num()}]])">
 									<div class="row px-4 Event_contentRow">
 										<div class="col-1 count">
 											<p class="text-center f22">5</p>
@@ -303,7 +303,7 @@
 							<hr class="px-5 text-black-50" />
 							<div class="row" th:each="hotel:${hotel}">
 								<div class="col">
-									<a th:href="@{'Event_view?id='+ ${hotel.getEvent_num()}}">
+									<a href="#" th:onclick="func_popEvent([[${hotel.getEvent_num()}]])">
 										<div class="row px-4 Event_contentRow">
 											<div class="col-1 count">
 												<p class="text-center f22">6</p>
@@ -338,7 +338,7 @@
 						<hr class="px-5 text-black-50" />
 						<div class="row" th:each="aicc3:${aicc3}">
 							<div class="col ">
-								<a th:href="@{'Event_view?id='+ ${aicc3.getEvent_num()}}">
+								<a href="#" th:onclick="func_popEvent([[${aicc3.getEvent_num()}]])">
 									<div class="row px-4 Event_contentRow">
 										<div class="col-1 count">
 											<p class="text-center f22">1</p>
@@ -367,7 +367,7 @@
 						<hr class="px-5 text-black-50" />
 						<div class="row" th:each="aiccFood3:${aiccFood3}">
 							<div class="col">
-								<a th:href="@{'Event_view?id='+ ${aiccFood3.getEvent_num()}}">
+								<a href="#" th:onclick="func_popEvent([[${aiccFood3.getEvent_num()}]])">
 									<div class="row px-4 Event_contentRow">
 										<div class="col-1 count">
 											<p class="text-center f22">2</p>
@@ -396,7 +396,7 @@
 						<hr class="px-5 text-black-50" />
 						<div class="row" th:each="aicc4:${aicc4}">
 							<div class="col">
-								<a th:href="@{'Event_view?id='+ ${aicc4.getEvent_num()}}">
+								<a href="#" th:onclick="func_popEvent([[${aicc4.getEvent_num()}]])">
 									<div class="row px-4 Event_contentRow">
 										<div class="col-1 count">
 											<p class="text-center f22">3</p>
@@ -424,7 +424,7 @@
 						<hr class="px-5 text-black-50" />
 						<div class="row" th:each="aiccCafe2:${aiccCafe2}">
 							<div class="col">
-								<a th:href="@{'Event_view?id='+ ${aiccCafe2.getEvent_num()}}">
+								<a href="#" th:onclick="func_popEvent([[${aiccCafe2.getEvent_num()}]])">
 									<div class="row px-4 Event_contentRow">
 										<div class="col-1 count">
 											<p class="text-center f22">4</p>
@@ -452,7 +452,7 @@
 						<hr class="px-5 text-black-50" />
 						<div class="row" th:each="aiccFood4:${aiccFood4}">
 							<div class="col">
-								<a th:href="@{'Event_view?id='+ ${aiccFood4.getEvent_num()}}">
+								<a href="#" th:onclick="func_popEvent([[${aiccFood4.getEvent_num()}]])">
 									<div class="row px-4 Event_contentRow">
 										<div class="col-1 count">
 											<p class="text-center f22">5</p>
@@ -480,7 +480,7 @@
 						<hr class="px-5 text-black-50" />
 						<div class="row" th:each="hotel2:${hotel2}">
 							<div class="col">
-								<a th:href="@{'Event_view?id='+ ${hotel2.getEvent_num()}}">
+								<a href="#" th:onclick="func_popEvent([[${hotel2.getEvent_num()}]])">
 									<div class="row px-4 Event_contentRow">
 										<div class="col-1 count">
 											<p class="text-center f22">6</p>
@@ -514,7 +514,7 @@
 						<hr class="px-5 text-black-50" />
 						<div class="row" th:each="aicc5:${aicc5}">
 							<div class="col">
-								<a th:href="@{'Event_view?id='+ ${aicc5.getEvent_num()}}">
+								<a href="#" th:onclick="func_popEvent([[${aicc5.getEvent_num()}]])">
 									<div class="row px-4 Event_contentRow">
 										<div class="col-1 count">
 											<p class="text-center f22">1</p>
@@ -543,7 +543,7 @@
 						<hr class="px-5 text-black-50" />
 						<div class="row" th:each="aiccFood5:${aiccFood5}">
 							<div class="col">
-								<a th:href="@{'Event_view?id='+ ${aiccFood5.getEvent_num()}}">
+								<a href="#" th:onclick="func_popEvent([[${aiccFood5.getEvent_num()}]])">
 									<div class="row px-4 Event_contentRow">
 										<div class="col-1 count">
 											<p class="text-center f22">2</p>
@@ -572,7 +572,7 @@
 						<hr class="px-5 text-black-50" />
 						<div class="row" th:each="aicc6:${aicc6}">
 							<div class="col">
-								<a th:href="@{'Event_view?id='+ ${aicc6.getEvent_num()}}">
+								<a href="#" th:onclick="func_popEvent([[${aicc6.getEvent_num()}]])">
 									<div class="row px-4 Event_contentRow">
 										<div class="col-1 count">
 											<p class="text-center f22">3</p>
@@ -600,7 +600,7 @@
 						<hr class="px-5 text-black-50" />
 						<div class="row" th:each="aiccCafe3:${aiccCafe3}">
 							<div class="col">
-								<a th:href="@{'Event_view?id='+ ${aiccCafe3.getEvent_num()}}">
+								<a href="#" th:onclick="func_popEvent([[${aiccCafe3.getEvent_num()}]])">
 									<div class="row px-4 Event_contentRow">
 										<div class="col-1 count">
 											<p class="text-center f22">4</p>
@@ -628,7 +628,7 @@
 						<hr class="px-5 text-black-50" />
 						<div class="row mb-3" th:each="aiccFood6:${aiccFood6}">
 							<div class="col mb-5">
-								<a th:href="@{'Event_view?id='+ ${aiccFood6.getEvent_num()}}">
+								<a href="#" th:onclick="func_popEvent([[${aiccFood6.getEvent_num()}]])">
 									<div class="row px-4 Event_contentRow">
 										<div class="col-1 count">
 											<p class="text-center f22">5</p>
@@ -819,9 +819,7 @@
 		for (var i = 0; i < positions.length; i++) {
 			var content = '<div class="bg-pink px-3 p-1 rounded-pill border border-dark text-black" style="position: relative;left:0px;bottom: 65px;font-size: 12px; margin:0 auto;z-index:3;">'
 					+ '    <div class="info">'
-					+ '            <a href="Event_view?id='
-					+ positions[i].number
-					+ '">'
+					+ '            <a href="#"  onclick="func_popEvent('+positions[i].number+')">'
 					+ '        <div class="title">'
 					+ [ i + 1 ]
 					+ ". "
@@ -970,9 +968,7 @@
 		for (var i = 0; i < positions2.length; i++) {
 			var content2 = '<div class="bg-pink px-3 p-1 rounded-pill border border-dark text-black" style="position: relative;left:0px;bottom: 65px;font-size: 12px; margin:0 auto;z-index:3;">'
 					+ '    <div class="info">'
-					+ '            <a href="Event_view?id='
-					+ positions2[i].number
-					+ '">'
+					+ '            <a href="#"  onclick="func_popEvent('+positions2[i].number+')">'
 					+ '        <div class="title">'
 					+ [ i + 1 ]
 					+ ". "
@@ -1119,9 +1115,7 @@
 		for (var i = 0; i < positions3.length; i++) {
 			var content3 = '<div class="bg-pink px-3 p-1 rounded-pill border border-dark text-black" style="position: relative;left:0px;bottom: 65px;font-size: 12px; margin:0 auto;z-index:3;">'
 					+ '    <div class="info">'
-					+ '            <a href="Event_view?id='
-					+ positions3[i].number
-					+ '">'
+					+ '            <a href="#"  onclick="func_popEvent('+positions3[i].number+')">'
 					+ '        <div class="title">'
 					+ [ i + 1 ]
 					+ ". "
@@ -1298,7 +1292,34 @@
 			}
 		});
 	</script>
+<!-- 코스 리스트 클릭 시 여행정보 팝업창 출력 -->
+<script>
 
+	
+	function func_popEvent(param) {
+		
+		// width  : 팝업창 가로 크기
+	    // height : 팝업창 세로 크기
+	    var popupWidth = 700;
+	    var popupHeight = 600;
+	    
+     	// 브라우저 중앙 위치 계산
+        // window.screenX : 브라우저의 현재 스크린 좌측상단 X좌표
+        // window.screenY : 브라우저의 현재 스크린 좌측상단 Y좌표
+       
+        // window.outerWidth  : 브라우저의 전체 가로 크기
+        // window.outerHeight : 브라우저의 전체 가로 크기
+        var popupX = Math.round(window.screenX + (window.outerWidth/2) - (popupWidth/2));
+        var popupY = Math.round(window.screenY + (window.outerHeight/2) - (popupHeight/2));
+        
+        var featureWindow = "width=" + popupWidth + ", height="+popupHeight
+        + ", left=" + popupX + ", top=" + popupY;
+        
+		window.open('/Event_view?id='+param, '_blank',featureWindow );
+		
+	}
+
+</script>
 </body>
 
 </html>
