--- a/src/main/resources/templates/thymeleaf/map/map_modal.html
+++ b/src/main/resources/templates/thymeleaf/map/map_modal.html
@@ -466,11 +466,24 @@
 	
 	function func_popEvent(param) {
 		
-		var popupW = 500;
-        var popupH = 235;
-        var left = Math.ceil((window.screen.width - popupW)/2);
-        var top = Math.ceil((window.screen.height - popupH)/2);
-		window.open('/Event_view?id='+param, '_blank', 'width=700, height = 600, scriollbars=yes');
+		// width  : 팝업창 가로 크기
+	    // height : 팝업창 세로 크기
+	    var popupWidth = 700;
+	    var popupHeight = 600;
+	    
+     	// 브라우저 중앙 위치 계산
+        // window.screenX : 브라우저의 현재 스크린 좌측상단 X좌표
+        // window.screenY : 브라우저의 현재 스크린 좌측상단 Y좌표
+       
+        // window.outerWidth  : 브라우저의 전체 가로 크기
+        // window.outerHeight : 브라우저의 전체 가로 크기
+        var popupX = Math.round(window.screenX + (window.outerWidth/2) - (popupWidth/2));
+        var popupY = Math.round(window.screenY + (window.outerHeight/2) - (popupHeight/2));
+        
+        var featureWindow = "width=" + popupWidth + ", height="+popupHeight
+        + ", left=" + popupX + ", top=" + popupY;
+        
+		window.open('/Event_view?id='+param, '_blank',featureWindow );
 		
 	}
 
