24-03-08 | 박검지 | map 코스저장 & 예약 버튼 이동 및 활성화

--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -121,7 +121,8 @@ div.crousel_textArea>a::after {
 
 .carousel-control-next-m, .carousel-control-prev-m{
 	z-index: 5;
-    width: 9%;
+    width: 50%;
+    margin-top: 790px;
 }
 
 /********************************
