--- a/src/main/resources/templates/thymeleaf/Member/checkout.html
+++ b/src/main/resources/templates/thymeleaf/Member/checkout.html
@@ -9,7 +9,8 @@
 <!-- 할인 쿠폰 -->
 <div class="container mt-3">
 	<div>
-		<input type="hidden" id="coupon-box"/> <label for="coupon-box"></label>
+		<input type="hidden" id="coupon-box"/> 
+		<label for="coupon-box"></label>
 	</div>
 	<!-- 결제 UI, 이용약관 UI 영역 -->
 	<div id="payment-method"></div>
@@ -25,14 +26,14 @@
 <script>
 	const coupon = document.getElementById("coupon-box");
 	const button = document.getElementById("payment-button");
-	const amount = 50000;
+	const amount = 10000;
 
 	// 구매자의 고유 아이디를 불러와서 customerKey로 설정하세요.
 	// 이메일・전화번호와 같이 유추가 가능한 값은 안전하지 않습니다.
 	const widgetClientKey = "test_ck_ex6BJGQOVDGW4j60eABB3W4w2zNb";
 	const customerKey = "AAHJMHRN1UCz07DZt_w6z";
 	const paymentWidget = PaymentWidget(widgetClientKey, customerKey); // 회원 결제
-	// const paymentWidget = PaymentWidget(widgetClientKey, PaymentWidget.ANONYMOUS) // 비회원 결제
+	//const paymentWidget = PaymentWidget(widgetClientKey, PaymentWidget.ANONYMOUS) // 비회원 결제
 
 	const paymentMethodWidget = paymentWidget.renderPaymentMethods(
 			"#payment-method", {
@@ -57,13 +58,13 @@
 		// 결제를 요청하기 전에 orderId, amount를 서버에 저장하세요. 
 		// 결제 과정에서 악의적으로 결제 금액이 바뀌는 것을 확인하는 용도입니다.  
 		paymentWidget.requestPayment({
-			orderId : "1W_pCfO4rzG9szJEcThKe",
-			orderName : "토스 티셔츠 외 2건",
+			orderId : "1W_pCfO4rzG9szJEcThK1", //주문번호를 난수로 설정해야될 것 같은데? 랜덤메소드로 해서 10만에서 99999999~까지 날짜랑 아이디
+			orderName : "사용자님의 울산 당일여행 코스", 
 			successUrl : window.location.origin + "/success",
 			failUrl : window.location.origin + "/fail",
 			customerEmail : "customer123@gmail.com",
 			customerName : "김토스",
-			customerMobilePhone : "01012341234",
+			customerMobilePhone : "01012341234"
 		});
 	});
 </script>
