--- a/src/main/resources/templates/thymeleaf/map/map.html
+++ b/src/main/resources/templates/thymeleaf/map/map.html
@@ -10,17 +10,32 @@
       <!-- 맵 컨텐츠 전체를 감싸는 영역  -->
       <div class="map_all_contentBox ">
          <!-- map 왼쪽 가이드 영역 -->
-         <div class="map_guide overflow-scroll" style="height: 100vh; ">
+         <div class="map_guide" style="height: 100vh; ">
             <!-- 정보값 출력 영역 day가 0일때-->
-            
                <div class="map_curr_locationBox  py-4 bg-pinkD">
                <div class="col map_curr_location ">
+	               	<!-- 예약 버튼 -->
+				    <div th:replace="~{alert/pay_modal::div}"> </div>   
+				    <div class="p-2 gap-4 d-flex justify-content-center">
+							<button class="btn saveBtn btn-pink rounded-pill btn-map-step hstack" type="button">
+								<img
+									src="https://cdn-icons-png.flaticon.com/128/11071/11071760.png"
+									alt="" style="width: 36px; height: 36px;" class="me-2" />코스 저장하기
+							</button>
+							<button type="button"
+								class="btn btn-main rounded-pill btn-map-step hstack"
+								data-bs-toggle="modal" data-bs-target="#feed_del_Modal">
+								<img src="../img/mypage/coin.png" width="36" height="36" class="me-2" alt="" />
+								예약하기
+							</button>
+					</div>
                   <div class="map_curr_location_name1 my-3 px-3 text-white">
                      <th:block th:if="${session.Member_Name eq null}">
                         <span>사용자님을 위한 여행코스</span></th:block>
                         <th:block th:if="${session.Member_Name ne null}">
                         <span th:text="${session.Member_Name}" class="f22 "></span><span>님을 위한 여행코스</span>
                         </th:block>
+
                      <div class="col p-3 bg-white mx-auto rounded-4 d-flex align-items-center mt-3">
                         <div class="col-2 bg-pinkD rounded-circle f14 dayCircle ">당일여행</div>
                         <div class="col-10 rounded-circle mt-3">
@@ -39,7 +54,6 @@
                         </div>
                      </div>
                   </div>
-                  
                </div>
             </div>
            
@@ -81,11 +95,11 @@
                <!-- 코스 저장 버튼 -->
                <form action="cours_Save" name="saveBtn" method="post">
                <div class="text-end me-3 d-flex"><p class="px-3 f20 fw-bold">day 1</p>
-               <button class="btn saveBtn btn-pink ms-auto" type="button">
+               <!-- <button class="btn saveBtn btn-pink ms-auto" type="button">
                <img
 									src="https://cdn-icons-png.flaticon.com/128/11071/11071760.png"
 									alt="" style="width: 30px; height: 30px;" /> 
-									코스 저장하기</button>
+									코스 저장하기</button> -->
 									</div>
                <input type="hidden" th:value="${aicc.get(0).getEvent_num()}" name="day1aicc"/>
                <input type="hidden" th:value="${aiccFood.get(0).getEvent_num()}" name="day1aiccFood"/>
@@ -234,15 +248,17 @@
         
 
    </div>
+
          <div class="map_mapSection col w-100 showmap">
             <!-- 지도를 표시할 div 입니다 -->
             <div id="map">
             	<h3 class="pgj">
 						<span class="rounded-4 p-3 bg-mainbg text-white">Day-1</span>
-					</h3>
+				</h3>
             </div>
          </div>
       </div>
+
       
 
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
