--- a/src/main/resources/templates/thymeleaf/aicc/aicc.html
+++ b/src/main/resources/templates/thymeleaf/aicc/aicc.html
@@ -185,11 +185,19 @@
                         </div> -->
                      </div>
                      <!--다음에 하기 btn -->
-                     <div class="py-4 my-4">
-                        <button type="submit"
-                           class="btn rounded-pill btn-outline-light next-btn">여기까지만
-                           선택하기</button>
-                     </div>
+							<div class="py-4 my-4 d-flex justify-content-around">
+								
+								<button class="btn rounded-2 btn-outline-light  "
+									data-bs-target="#ai-cok-carousel" data-bs-slide-to="0"
+									aria-label="Slide 1">이전</button>
+							
+							<button type="submit"
+								class="btn rounded-2 btn-outline-light next-btn">여기까지만
+								선택하기</button>
+							<button class="btn rounded-2 btn-outline-light  "
+								data-bs-target="#ai-cok-carousel" data-bs-slide-to="2"
+								aria-label="Slide 3">다음</button>
+						</div>
                   </div>
 
                </div>
@@ -294,11 +302,19 @@
                         </div>
                      </div>
                      <!-- 다음에 하기 btn -->
-                     <div class="py-4 mt-5">
-                        <button type="submit"
-                           class="btn rounded-pill btn-outline-light next-btn mt-4">여기까지만
-                           선택하기</button>
-                     </div>
+                    <div class="py-4 my-4 d-flex justify-content-around">
+								
+								<button class="btn rounded-2 btn-outline-light "
+									data-bs-target="#ai-cok-carousel" data-bs-slide-to="1"
+									aria-label="Slide 2">이전</button>
+							
+							<button type="submit"
+								class="btn rounded-2 btn-outline-light next-btn">여기까지만
+								선택하기</button>
+							<button class="btn rounded-2 btn-outline-light "
+								data-bs-target="#ai-cok-carousel" data-bs-slide-to="3"
+								aria-label="Slide 4">다음</button>
+						</div>
                   </div>
 
                </div>
