--- a/src/main/resources/templates/thymeleaf/feed/feed2.html
+++ b/src/main/resources/templates/thymeleaf/feed/feed2.html
@@ -360,6 +360,7 @@
 	</div>
 	<!-- <div class="css_test"></div> -->
 	<!--container-->
+	 <div th:replace="~{footer/robot::robot}"></div>
 	<div th:replace="~{footer/footer::footer}"></div>
 	<!-- 좋아요 비동기 -->
 	<script>
