--- a/src/main/resources/templates/thymeleaf/map/mapDay2.html
+++ b/src/main/resources/templates/thymeleaf/map/mapDay2.html
@@ -327,7 +327,7 @@
 						<p class="px-3 f20 fw-bold">day 2</p>
 						<!-- 여행지 1 -->
 						<hr class="px-5 text-black-50" />
-						<div class="row mb-5" th:each="aicc3:${aicc3}">
+						<div class="row " th:each="aicc3:${aicc3}">
 							<div class="col ">
 								<a th:href="@{'Event_view?id='+ ${aicc3.getEvent_num()}}">
 									<div class="row px-4 Event_contentRow">
