--- a/src/main/resources/templates/thymeleaf/info/info.html
+++ b/src/main/resources/templates/thymeleaf/info/info.html
@@ -208,7 +208,7 @@
 		</div>
 
 	</div>
-
+	<div th:replace="~{footer/robot::robot}"></div>
 	<div th:replace="~{footer/footer::footer}"></div>
 	<script type="text/javascript">
         $(document).ready(function() {
