--- a/src/main/resources/templates/thymeleaf/Member/mypage.html
+++ b/src/main/resources/templates/thymeleaf/Member/mypage.html
@@ -184,7 +184,7 @@
                 </div>
                 <!-- 보관함 | 우측의 우측 -->
                 <div class="col-12 col-md w-100 d-flex align-items-stretch border rounded-4 p-4 mt-md-0">
-                    <div class="row p-0 m-auto m-0 w-100 h-100">
+                    <div class="row p-0 m-auto m-0 w-100 h-100 align-content-start">
                         <!--보관함-->
                         <div class="col-12 p-0">
                             <div class="d-flex justify-content-between">
