24-03-08 | 박검지 | 풀 오류로 인한 커밋

--- a/src/main/resources/templates/thymeleaf/Member/MemberList.html
+++ b/src/main/resources/templates/thymeleaf/Member/MemberList.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <div th:replace="~{head/head::head}"></div>
-<style>
+<!-- <style>
 @
 keyframes rotateBorderColors { 0% {
 	border-top-color: red;
@@ -81,7 +81,7 @@ yellow;
 	border-style: solid;
 	animation: rotateBorderColors 4s linear infinite;
 }
-</style>
+</style> -->
 <body>
 	<div th:replace="~{nav/nav::nav}"></div>
 	<!-- 토스트 -->
