--- a/src/main/resources/templates/thymeleaf/band/band.html
+++ b/src/main/resources/templates/thymeleaf/band/band.html
@@ -65,7 +65,7 @@
 		                            <span class="mb-1"th:text="${bandList.getBand_content()}" ></span>
 	                        	</div>
 	                            <div class="band_more_view  text-center bg-main my-1">
-	                                <span class="">밴드로 가기 ></span>
+	                                <span class="mb-3">밴드로 가기 ></span>
 	                            </div>
 	                        </div>
 	                    </a>
