--- a/src/main/resources/templates/thymeleaf/info/Event_view.html
+++ b/src/main/resources/templates/thymeleaf/info/Event_view.html
@@ -236,16 +236,17 @@
 		mapy = parseFloat(mapy);
 		// 마커가 표시될 위치입니다 
 		var markerPosition = new kakao.maps.LatLng(mapx, mapy);
-
+		
 		// 마커를 생성합니다
 		var marker = new kakao.maps.Marker({
-			position : markerPosition
+// 			position : markerPosition,
+			text: '텍스트를 표시할 수 있어요!'
 		});
 		
 		var staticMapContainer = document.getElementById('map'); // 지도를 표시할 div
 		staticMapOption = {
 			center : new kakao.maps.LatLng(mapx, mapy), // 지도의 중심좌표
-			level : 4,
+			level : 3,
 		// 지도의 확대 레벨
 		 marker: marker // 이미지 지도에 표시할 마커 
 		};
