--- a/src/main/resources/templates/thymeleaf/info/infoCourse.html
+++ b/src/main/resources/templates/thymeleaf/info/infoCourse.html
@@ -63,9 +63,11 @@
                            <div class="row ">
                               <div class="col-12 f20 text-truncate fw-bold"style="line-height: 80px;">
                                 
-                                    [<span th:text="${list.getMember_Id()}"></span>] 의 <span
+                                    [<span th:text="${list.getMember_Id()}"></span>] 의 
+                                     <span
+                                       th:text="${list.getCourse_Interest()}" class="highlight px-0"> </span>
+                                    <span
                                        th:text="|${list.getCourse_Name()} 코스|" class=""> </span>
-                                
                               </div>
                            </div>
                            
