--- a/src/main/resources/templates/thymeleaf/Member/fail.html
+++ b/src/main/resources/templates/thymeleaf/Member/fail.html
@@ -1,11 +1,8 @@
-<!doctype html>
-<html xmlns:th="http://www.thymeleaf.org">
-  <head>
-    <meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-  </head>
+<div th:replace="~{head/head::head}"></div>
+<script src="https://js.tosspayments.com/v1/payment-widget"></script>
 
-  <body>
+<body>
+	<div th:replace="~{nav/nav::nav}"></div>
     <h2> 결제 실패 </h2>
     <p id="code"></p>
     <p id="message"></p>
