--- a/src/main/resources/templates/thymeleaf/Member/success.html
+++ b/src/main/resources/templates/thymeleaf/Member/success.html
@@ -1,16 +1,16 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org">
-  <head>
-    <meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-  </head>
-  <body>
-    <h2>결제 성공</h2>
-    <p id="paymentKey"></p>
-    <p id="orderId"></p>
-    <p id="amount"></p>
+<div th:replace="~{head/head::head}"></div>
+<script src="https://js.tosspayments.com/v1/payment-widget"></script>
 
-    <script>
+<body>
+	<div th:replace="~{nav/nav::nav}"></div>
+    <h2>결제 성공</h2>
+    <p id="paymentKey">환불키</p>
+    <p id="orderId">주문번호</p>
+    <p id="amount">결제 금액</p>
+
+   <!--  <script>
       // 쿼리 파라미터 값이 결제 요청할 때 보낸 데이터와 동일한지 반드시 확인하세요.
       // 클라이언트에서 결제 금액을 조작하는 행위를 방지할 수 있습니다.
       const urlParams = new URLSearchParams(window.location.search);
@@ -53,6 +53,6 @@
       orderIdElement.textContent = "주문번호: " + orderId;
       amountElement.textContent = "결제 금액: " + amount;
       paymentKeyElement.textContent = "paymentKey: " + paymentKey;
-    </script>
+    </script> -->
   </body>
 </html>
