--- a/src/main/resources/templates/thymeleaf/map/map.html
+++ b/src/main/resources/templates/thymeleaf/map/map.html
@@ -14,21 +14,6 @@
             <!-- 정보값 출력 영역 day가 0일때-->
                <div class="map_curr_locationBox  py-4 bg-pinkD">
                <div class="col map_curr_location ">
-	               	<!-- 예약 버튼 -->
-				    <div th:replace="~{alert/pay_modal::div}"> </div>   
-				    <div class="p-2 gap-4 d-flex justify-content-center">
-							<button class="btn saveBtn btn-pink rounded-pill btn-map-step hstack" type="button">
-								<img
-									src="https://cdn-icons-png.flaticon.com/128/11071/11071760.png"
-									alt="" style="width: 36px; height: 36px;" class="me-2" />코스 저장하기
-							</button>
-							<button type="button"
-								class="btn btn-main rounded-pill btn-map-step hstack"
-								data-bs-toggle="modal" data-bs-target="#feed_del_Modal">
-								<img src="../img/mypage/coin.png" width="36" height="36" class="me-2" alt="" />
-								예약하기
-							</button>
-					</div>
                   <div class="map_curr_location_name1 my-3 px-3 text-white">
                      <th:block th:if="${session.Member_Name eq null}">
                         <span>사용자님을 위한 여행코스</span></th:block>
@@ -40,7 +25,13 @@
                         <div class="col-2 bg-pinkD rounded-circle f14 dayCircle ">당일여행</div>
                         <div class="col-10 rounded-circle mt-3">
                             <p class="px-3 mb-1 pb-1"><b>여행 지역 </b> <span class="text-black mx-2 ">|</span> <span th:text="${aicc.get(0).getEvent_area()}" class="text-black"></span></p>
-                            <p class="px-3 mb-1 pb-1 text-black"><b>총 거리</b> <span class="text-black mx-2">|</span> <span class="totalDistance text-black"></span> </p>
+                            <p class="px-3 mb-1 pb-1 text-black"><b>총 거리</b> <span class="text-black mx-2">|</span> 
+                            <span class="totalDistance text-black"></span>
+                            <p class="px-3 mb-1 pb-1 text-black"><b>예상 금액</b> <span class="text-black mx-2">|</span> 
+                            <span class="amount text-black"></span>
+                            <!-- <p class="px-3 mb-1 pb-1 text-black"><b>기름값</b> <span class="text-black mx-2">|</span> 
+                            <span class="oil text-black"></span> -->
+                            </p>
                             <p class="px-3 text-black">
                             <th:block th:if="${thema!=null and thema != ' '}"># <span th:text="${thema}" class="text-black "></span></th:block>
                             <th:block th:if="${thema1!=null and thema1 != ' '}"># <span th:text="${thema1}" class="text-black "></span></th:block>
@@ -54,6 +45,25 @@
                         </div>
                      </div>
                   </div>
+                  	               	<!-- 예약 버튼 -->
+				    <div th:replace="~{alert/pay_modal::div}"> </div>   
+				    <div class="p-2 gap-4 d-flex justify-content-center">
+							<button type="button"
+								class="btn btn-main rounded-pill btn-map-step hstack"
+								data-bs-toggle="modal" 
+								data-bs-target="#feed_del_Modal" 
+								data-bs-placement="bottom" 
+								data-bs-custom-class="custom-tooltip"
+								data-bs-title="This top tooltip is themed via CSS variables.">
+								<img src="../img/mypage/coin.png" width="36" height="36" class="me-2" alt="" />
+								예약하기
+							</button>
+							<button class="btn saveBtn btn-pink rounded-pill btn-map-step hstack" type="button">
+								<img
+									src="https://cdn-icons-png.flaticon.com/128/11071/11071760.png"
+									alt="" style="width: 36px; height: 36px;" class="me-2" />코스 저장하기
+							</button>
+					</div>
                </div>
             </div>
            
@@ -94,7 +104,7 @@
                
                <!-- 코스 저장 버튼 -->
                <form action="cours_Save" name="saveBtn" method="post">
-               <div class="text-end me-3 d-flex"><p class="px-3 f20 fw-bold">day 1</p>
+               <div class="text-end me-3 d-flex"><p class="px-3 f20 fw-bold mb-0">day 1</p>
                <!-- <button class="btn saveBtn btn-pink ms-auto" type="button">
                <img
 									src="https://cdn-icons-png.flaticon.com/128/11071/11071760.png"
@@ -367,7 +377,14 @@
 		var distance;
 
 		var totalDistance = 0; // 총 거리를 저장할 변수를 초기화합니다.
-
+		
+		var oil = 0; // 기름값 초기화
+		var amount = 0; // 예상 금액 초기화
+		var stay = 0; // 숙소 금액
+		var food = 50000; // 맛집 금액
+		var beverage = 20000; // 카페 (음료) 금액
+		
+		
 		var subtotalDistance = 0;
 		for (var i = 0; i < positions.length; i++) {
 			if (i != 0) {
@@ -391,9 +408,16 @@
 			document.querySelector('.totalDistance').innerText = totalDistance
 					.toFixed(2)
 					/ 1000 +"km";
-			document.querySelector('.totalDistanceValue').value = (totalDistance / 1000)
-					.toFixed(2);
-
+			document.querySelector('.totalDistanceValue').value = (totalDistance / 1000).toFixed(2);
+			
+			
+			// 예상금액 //
+			oil = Math.round((totalDistance / 1000) * 1700); // oil 값 in
+			//document.querySelector('.oil').innerText = oil+"원"; // oil 값 out test
+			amount = oil + stay + food + beverage;
+			document.querySelector('.amount').innerText = amount.toLocaleString()+"원"; // 최종 금액 out
+			document.querySelector('.amount2').innerText = amount.toLocaleString()+"원"; // 최종 금액 out
+			document.querySelector('.amountValue').value = amount;
 		}
 
 		function displayCircleDot(position, distance) {
@@ -481,7 +505,8 @@
 
 	
 	function func_popEvent(param) {
-		
+		const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+		const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
 		// width  : 팝업창 가로 크기
 	    // height : 팝업창 세로 크기
 	    var popupWidth = 700;
