--- a/src/main/resources/templates/alert/pay_modal.html
+++ b/src/main/resources/templates/alert/pay_modal.html
@@ -8,7 +8,7 @@
 		aria-labelledby="feed_del_ModalLabel" aria-hidden="true">
 		<div
 			class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-			<div class="modal-content rounded-4 border-none bg-trans overflow shadow-s">
+			<div class="mt-5 modal-content rounded-4 border-none bg-trans overflow shadow-s">
 				<!-- X btn -->
 				<img data-bs-dismiss="modal" aria-label="Close"
 					src="../img/mypage/del.png"
@@ -24,10 +24,10 @@
 				</div>
 				<!-- 모달 -->
 				<form action="/checkout" method="post">
-				<div class="rounded-4 overflow-hidden">
+				<div class="rounded-4 overflow-hidden bg-trans">
 					<div class="modal-header border-none bg-white"></div>
 					<!-- Modal body -->
-					<div class="modal-body text-center p-0">
+					<div class="modal-body text-center p-0 bg-trans">
 						<div class="row p-0 m-auto">
 							<div class="col p-0 text-black bg-white">
 								<div class="w-100 overflow-hidden xh-300 hstack">
@@ -57,19 +57,36 @@
 									<input type="hidden" id="day" name="day" th:value="${day}" />
 									<input type="hidden" class="amountValue" value="" name="amount"/>
                         			
-                        			
 								</span> 
 								
-								<span 
-									class="f16 d-block my-3 px-5">수학여행하면 먼저 떠오르는 경주 ! <br /> 신라의 문화와 역사가 잠들어있는 고고한 도시다.  🌉 <br /> 경주의 밤은 잠들지 않는다. <br /> 밤에 가보면 더 아름다운 첨성대나 계림의 모습은 잊을 수 없는 추억이 될 것이다.</span>
-								<div class="btn btn-sm btn-light rounded-pill my-2 f14">전체 예약 금액</div>
-								<span><b class="text-pink d-block f20 amount2"></b></span>
+								<span class="f16 d-block my-3 px-5">Carrier가 추천하는 <span th></span> 코스입니다!</span>
+
+										<p class="px-3 mb-1 pb-1">
+											<b>여행 지역 </b> <span class="text-black mx-2 ">|</span> <span
+												th:text="${aicc.get(0).getEvent_area()}" class="text-black"></span>
+										</p>
+										<p class="px-3 mb-1 pb-1 text-black">
+											<b>총 거리</b> <span class="text-black mx-2">|</span> <span
+												class="totalDistance text-black"></span> 
+										<p class="px-3 mb-1 pb-1 text-black">
+											<b>예상 금액</b> <span class="text-black mx-2">|</span> <span
+												class="amount text-black"></span>
+								
+								
+								<span><b
+												class="text-pink d-block f17 amount2 fw-light text-decoration-line-through"></b></span>
+										
+										<div class="hstack d-flex justify-content-center text-center">
+                        				<div class="btn btn-sm btn-light rounded-pill my-2 f14">지금 바로 결제 시</div>
+                        				<span><b class="ms-2 text-pink f20 discount"></b></span>
+                        			</div>
 								</div>
 							</div>
 							<img src="../img/mypage/bg_detail_pop.png" class="img-fluid p-0"
 								alt="" />
 						</div>
 					</div>
+						<span class="small text-danger d-block text-center bg-white">* 카페와 맛집 가격을 제외한 <b>2인 기준 숙박 결제 금액</b>입니다</span>
 					<div class="modal-footer border-none pb-5 bg-white w-100">
 						<button class="btn btn-pinkD m-auto rounded-pill py-2 px-4">결제하기
 						</button>
