24-03-08 | 박검지 | 결제 모달 작업 중

--- a/src/main/resources/templates/alert/pay_modal.html
+++ b/src/main/resources/templates/alert/pay_modal.html
@@ -59,7 +59,7 @@
                         			
 								</span> 
 								
-								<span class="f16 d-block my-3 px-5">Carrier가 추천하는 <span th></span> 코스입니다!</span>
+								<span class="f16 d-block my-3 px-5">Carrier가 추천하는 코스입니다!</span>
 
 										<p class="px-3 mb-1 pb-1">
 											<b>여행 지역 </b> <span class="text-black mx-2 ">|</span> <span
