--- a/src/main/resources/templates/thymeleaf/map/map_0221.html
+++ b/src/main/resources/templates/thymeleaf/map/map_0221.html
@@ -27,7 +27,7 @@
                 <!-- map guide 아이콘 영역 -->
                 	<!-- 전체 리스트 출력 -->
                 <th:block th:if="${selectCategory.equals('all')}">
-	                <div class="map_guide_iconBox ">
+	                <div class="indexMap_guide_iconBox ">
 	                    <div class="map_guide_icon">
 	                        <ul class="map_guide_icon_list px-0">
 	                            <li class="map_guide_icon_item map_icon_near_trip on">관광지</li>
